[package]
name = "thiserror"
version = "2.0.38"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns"]
description = "derive(Error)"
documentation = "https://docs.rs/thiserror"
edition = "2018"
keywords = ["error", "error-handling", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bigpay/thiserror"
rust-version = "1.31"

[dependencies]
http = "0.2.8"
thiserror-impl = { version = "=2.0.38", path = "impl" }

[dev-dependencies]
anyhow = "1.0.65"
ref-cast = "1.0"
rustversion = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
