[package]
name = "thiserror-impl"
version = "2.0.38"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the `thiserror` crate"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bigpay/thiserror"
rust-version = "1.31"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.45"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
